try to fix background size on mobile

--- a/index.css
+++ b/index.css
@@ -19,6 +19,7 @@ body:before {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  max-height: 100vh;
 }
 
 body {
